# ros2-envelope

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ros2_docker.ps1  ros2_docker.sh
src/: CMakeLists.txt  microcontroller_stub.cpp  package.xml  safety_envelope.cpp  safety_envelope.hpp
src/safety_envelope/: CMakeLists.txt  README.md  package.xml
src/safety_envelope/config/: default_boundaries.yaml
src/safety_envelope/doc/: safety_envelope_notes.md
src/safety_envelope/include/safety_envelope/: safety_envelope.hpp
src/safety_envelope/launch/: safety_envelope.launch.py
src/safety_envelope/src/: safety_envelope.cpp  safety_envelope_node.cpp
src/safety_envelope/test/: test_safety_envelope.cpp
